# FAM-base-backend

./: .gitignore  LICENSE  README.md  copier.yml  pyproject.toml
fam_base_backend/template/: README.md  {% if project_license.name != 'None' %}LICENSE{% endif %}  {{_copier_conf.answers_file}}
fam_base_backend/tests/: test_template.py
tests/: test_template.py
